<resources>
    <string name="hello">Hello World, DvbPlayerActivity!</string>
    <string name="app_name">AdtvPlayer</string>
    <string
        name="play_pf_current_program">新闻联播</string>
    <string
        name="play_pf_current_program_time">19:00~19:30</string>
    <string
        name="play_pf_next_program">天气预报</string>
    <string
        name="play_pf_next_program_time">19:35~19:50</string>
    <string
        name="menu">Menu</string>
    <string
        name="menu_settings">TV Settings</string>
    <string
        name="menu_channel_list">Channel List</string>
    <string
        name="menu_program_guide">Program Guide</string>
    <string
        name="menu_reservation_list">Reservation List</string>
    <string
        name="menu_has_rec">Recorded Program</string>
    <string
        name="menu_channel_search">TV Search</string>
    <string
        name="menu_management">Program Manage</string>
    <string
        name="ca_message">Watch CA Infomation</string>
    <string
        name="menu_mail">TV Mail</string>
    <string
        name="volume_setting">Volume Settings</string>
    <string
        name="channel_search_title">TV Search</string>
    <string
        name="channel_search_auto">Auto Search</string>
    <string
        name="channel_search_manual">Manual Search</string>
    <string
        name="channel_search_full">Full Search</string>
    <string
        name="channel_search_set_frequency">Main Frequency Set</string>
    <string
        name="channel_list_category">All Channels</string>
    <string
        name="channel_search_startsearchtext">Start Search</string>
    <string
        name="channel_search_stopsearchtext">Stop Search</string>
    <string
        name="channel_search_researchtext">Research</string>
    <string
        name="channel_search_startsearchtip">Start Searching...</string>
    <string
        name="channel_search_initsearchtip">Init Searching...</string>
    <string
        name="channel_search_completesearchtip">Searched OK...</string>
    <string
        name="channel_search_stopsearchtip">Stop Searching...</string>
    <string
        name="channel_search_searchingtip">Searching...</string>
    <string
        name="channel_search_searching">Searching...</string>
    <string
        name="search_progress_text">Progress of Search</string>
    <string
        name="search_progress_zero">0%</string>
    <string
        name="search_completed">Searched Ok, Are you want to watch TV now ?</string>
    <string
        name="search_stop_save_ask">Do you want save searched programs，and watch TV now ?</string>
    <string
        name="search_no_channel">Searched no program，Failed !</string>
    <string
        name="search_no_channel_manual">There no program in this frequency，Do you want to watch TV now ?</string>
    <string
        name="type_frequency_text">Input Frequency</string>
    <string
        name="symbol_rate">Symbol Rate</string>
    <string
        name="modulation">Modulation</string>
    <string
        name="frequency_out_of_range">Frequency between 47-862，Re Input Please !</string>
    <string
        name="frequency_null">Frequency can not be null，Re Input Please !</string>
    <string
        name="symbol_rate_out_of_range">Symbol Rate between 1500-7200，Re Input Please !</string>
    <string
        name="symbol_rate_null">Symbol Rate can not be null，Re Input Please !</string>
    <string
        name="current_frequency_text">Current Frequency</string>
    <string
        name="available_channels_text">Searched ： programs</string>
    <string
        name="available_bc_text">BroadCast</string>
    <string
        name="available_nvod_text">NVOD</string>
    <string
        name="m_hz">M HZ</string>
    <string
        name="k_baud">K baud </string>
    <string
        name="max_hz">6875</string>
    <string
        name="qam_64"> 64 QAM</string>
    <string
        name="qam_128"> 128 QAM</string>
    <string
        name="qam_256"> 256 QAM</string>
    <string
        name="s642">642</string>
    <string
        name="s6875">6875</string>
    <string
        name="s64">64</string>
    <string
        name="s128">128</string>
    <string
        name="s256">256</string>
    <string
        name="s151"> 151 </string>
    <string
        name="alert_dialog_ok">Ensure</string>
    <string 
        name="alert_dialog_watch">Watch</string>
    <string
        name="alert_dialog_cancel">Back</string>
    <string
        name="channel_num">Channel Number</string>
    <string
        name="channel_name">Channel Name</string>
    <string
        name="channel_type">Channel Type</string>
    <string
        name="channel_fre">In Frequency</string>
    <string
        name="search_complete_text">Ok</string>
    <string
        name="search_result_text">Searched： total</string>
    <string
        name="search_count_channel_text">Channels</string>
    <string
        name="zero">0</string>
    <string
        name="vc_week_1_sun">周日</string>
    <string
        name="vc_week_2_mon">周一</string>
    <string
        name="vc_week_3_tue">周二</string>
    <string
        name="vc_week_4_wen">周三</string>
    <string
        name="vc_week_5_thu">周四</string>
    <string
        name="vc_week_6_fri">周五</string>
    <string
        name="vc_week_7_sat">周六</string>
    <string
        name="bc_program_guide">广播节目指南</string>
    <string
        name="bc_menu_management">广播频道管理</string>
    <string
        name="open_sub_list">预约列表</string>
    <string
        name="program_chose_date">日期</string>
    <string
        name="none_reservation_program">无预约节目</string>
    <string
        name="already_add_sublist">节目已加入预约列表中</string>
    <string
        name="reservation_list_out">已预约满50个节目，不能继续预约</string>
    <string
        name="transcription_content">是否开始录制 ?</string>
    <string
        name="recording_list_out">已预约录制满50个节目，不能继续预约录制</string>
    <string
        name="past_program">节目正在播放，请直接收看</string>
    <string
        name="program_time_collision">该时间段已预约收看</string>
    <string
        name="program_time_collision_ask">是否替换?</string>
    <string
        name="already_cancel_sublist">节目已经取消预约</string>
    <string
        name="program_introduce">暂无简介！</string>
    <string
        name="set_and_cancel_sub">预约收看</string>
    <string
        name="set_and_cancel_rec">预约录制</string>
    <string
        name="appointment_title">已预约节目</string>
    <string
        name="appointment_text2">取消预约</string>
    <string
        name="reservation_program_no">无预约节目</string>
    <string
        name="alert_no_appoint_program">当前已无预约节目！</string>
    <string
        name="alert_yes_appoint_program">已删除预约节目！</string>
    <string
        name="appointment_program_ask_left">您预约的节目【</string>
    <string
        name="appointment_program_delete">删除预约</string>
    <string
        name="alert_ensure_delete_appointmentprogram">您要删除这个预约节目吗 ?</string>
    <string
        name="alert_reservation">"预约收看提示"</string>
    <string
        name="appointment_program_ask_right">】即将播放,是否观看?</string>
    <string
        name="program_chose_introduce">节目简介</string>
    <string
        name="cancel_sub">取消预约收看</string>
    <string
        name="cancel_reserve_rec">取消预约录制</string>
    <string
        name="is_or_not_search_ask">无频道，是否现在搜索?</string>
    <string
        name="help_text_add_favorite">设为喜爱</string>
    <string
        name="help_text_delete_favorite">删除喜爱</string>
    <string
        name="favorites_list_out">已添加50个喜爱频道,不能再添加</string>
    <string
        name="favorites_list_null">未设置喜爱频道</string>
    <string
        name="favorites_channels">喜爱频道</string>
    <string
        name="favorites_red_button_set">设为喜爱</string>
    <string
        name="favorites_list_open">喜爱列表</string>
    <string
        name="help_text_add_delete_favorite">添加/删除喜爱</string>
    <string
        name="favorites_delete_love">已删除喜爱标记</string>
    <string
        name="favorites_add_love">已设置喜爱标记</string>
    <string
        name="favorites_no">请设置喜爱频道</string>
    <string
        name="set_love_channel">设为喜爱</string>
    <string
        name="delete_love_channel">删除喜爱</string>
    <string
        name="open_love_channel">喜爱列表</string>
    <string
        name="bc_channel_list_title_text_favorite">喜爱广播频道列表</string>
    <string
        name="ok">确定</string>
    <string
        name="no">取消</string>
    <string
        name="alert">"提示"</string>
    <string
        name="author_message">浏览授权信息</string>
    <string
        name="volume_save_setting_title">音量设置</string>
    <string
        name="volume_modle_setting_title">声道设置</string>
    <string
        name="volume_sub_channels_save">分频道保存</string>
    <string
        name="volume_no_sub_channels_save">不分频道保存</string>
    <string
        name="volume_model_all_save">立体声</string>
    <string
        name="volume_model_left_save">左声道</string>
    <string
        name="volume_model_right_save">右声道</string>
    <string
        name="is_or_not_undo_lock">解锁频道 ?</string>
    <string
        name="undo_lock">已解锁</string>
    <string
        name="is_or_not_add_lock">加锁频道 ?</string>
    <string
        name="add_lock">已加锁</string>
    <string
        name="channel_manage_title_text">频道管理</string>
    <string
        name="channel_manage_title_text_move">移动频道</string>
    <string
        name="channel_manage_add_delete_lock">加锁/解锁</string>
    <string
        name="channel_manage_add_lock">加锁</string>
    <string
        name="channel_manage_delete_lock">解锁</string>
    <string
        name="help_text_move">移动</string>
    <string
        name="help_text_press">按</string>
    <string
        name="help_text_delete">删除</string>
    <string
        name="channel_manage_text4">确定移动</string>
    <string
        name="channel_manage_no">请先搜索频道</string>
    <string
        name="channel_info_null">无频道,请先搜索频道</string>
    <string
        name="channel_manage_lock_on">频道已加锁</string>
    <string
        name="channel_manage_lock_off">频道已解锁</string>
    <string
        name="channel_manage_lock_askon">您确定要加锁频道吗 ?</string>
    <string
        name="channel_manage_lock_askoff">您确定要解锁频道吗 ?</string>
    <string
        name="channel_manage_delete_ask">您确定要删除频道吗 ?</string>
    <string
        name="channel_manage_delete">您确定要删除频道吗 ?</string>
    <string
        name="channel_manage_deleted">频道已删除</string>
    <string
        name="channel_manage_move_illegaltoast">请按方向键选择您要移动到的位置 !</string>
    <string
        name="channel_manage_password_error">密码错误，请重新输入!</string>
    <string
        name="channel_manage_password_null">请输入6位密码 !</string>
    <string
        name="please_enter_password">请输入6位密码</string>
    <string
        name="program_guide_introduce_null">无节目简介</string>
    <string
        name="time_is_ok_tvplayer">电视事件已到，电视时间已到，是否开始播放</string>
    <string
        name="is_or_not_search_ask_nit">频道需要更新，大概用时1~5分钟，是否现在更新？</string>
    <string
        name="symbol_check_symbol_value">信号强度：</string>
    <string
        name="symbol_check_symbol_querty">信号质量：</string>
    <string name="start_search">开始搜索</string>
    <string name="advanced_option">高级选项</string>
    <string name="channel_count_text">个频道</string>
    <string name="channel_number_text">频道号</string>
    <string name="channel_name_text">频道名称</string>
    <string name="channel_type_text">频道类型</string>
    <string name="channel_frequency_text">所在频率</string>
    <string name="manual_search_main">电视搜索/手动搜索</string>
    <string name="frequency_text">频率:</string>
    <string name="khz">Khz</string>
    <string name="symbol_rate_text">符号率:</string>
    <string name="modulate_text">调制方式：</string>
    <string name="sixtyfour_qam">64 QAM</string>
    <string name="cancle">取消</string>
    <string name="fast_search_advanced_title">电视搜索/快速搜索/高级设置</string>
    <string name="save">保存</string>
    <string name="download_search_anvanced_title">电视搜索/网络下载频道列表/高级设置</string>
    <string name="address_code_text">地区码：</string>
    <string name="channel_count_title">共搜索到</string>
</resources>