<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/search_bg" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:paddingTop="100dip" >

        <TextView
            android:id="@+id/tv_fast_search_main"
            android:layout_width="wrap_content"
            android:layout_height="57dip"
            android:text="@string/manual_search_main"
            android:textColor="@color/white"
            android:drawableLeft="@drawable/search_left_arrows"
            android:drawablePadding="20dip"
            android:paddingLeft="15dip"
            android:paddingRight="20dip"
            android:background="#202031"
            android:gravity="center_vertical"
            android:alpha="75"
            android:textSize="35sp" >
        </TextView>
        
        <LinearLayout 
            android:layout_width="1342dip"
            android:layout_height="66dip"
            android:id="@+id/hand_search_edit_layout"
            android:layout_alignLeft="@id/tv_fast_search_main"
            android:layout_below="@id/tv_fast_search_main"
            android:layout_marginTop="40dip"
            android:orientation="horizontal"
            >
            <LinearLayout
                android:layout_width="410dip"
                android:layout_height="60dip"
                android:orientation="horizontal" 
                >

            <TextView
                android:layout_width="110dip"
                android:layout_height="60dip"
                android:text="@string/frequency_text"
                android:textColor="@color/text"
                android:textSize="30sp" />

            <novel.supertv.dvb.view.MyEditText
                android:id="@+id/frequency_edit"
                android:layout_width="230dip"
                android:layout_height="60dip"
                android:background="@drawable/et_search_selector"
                android:gravity="center"
                android:maxLength="3"
                android:numeric="integer"
                android:paddingLeft="10dip"
                android:textColor="@color/text"
                android:textSize="30sp" />

            <TextView
                android:layout_width="70dip"
                android:layout_height="60dip"
                android:paddingLeft="10dip"
                android:textSize="30sp"
                android:textColor="@color/text"
                android:text="@string/khz" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="410dip"
                android:layout_height="60dip"
                android:layout_marginLeft="20dip"
                android:orientation="horizontal" >
    
                <TextView
                    android:layout_width="110dip"
                    android:layout_height="60dip"
                    android:text="@string/symbol_rate_text"
                    android:textColor="@color/text"
                    android:textSize="30sp" />
    
                <novel.supertv.dvb.view.MyEditText
                    android:id="@+id/symbol_rate_edit"
                    android:layout_width="230dip"
                    android:layout_height="60dip"
                    android:background="@drawable/et_search_selector"
                    android:gravity="center"
                    android:maxLength="4"
                    android:numeric="integer"
                    android:paddingLeft="10dip"
                    android:textColor="@color/text"
                    android:textSize="30sp" />
                <TextView
                    android:layout_width="70dip"
                    android:layout_height="60dip"
                    android:textSize="30sp"
                    android:textColor="@color/text"
                    android:paddingLeft="10dip"
                    android:text="@string/khz" />
            </LinearLayout>
            
            <LinearLayout
                android:layout_width="520dip"
                android:layout_height="66dip"
                android:layout_marginLeft="20dip"
                android:orientation="horizontal" 
                >
    
                <TextView
                    android:layout_width="150dip"
                    android:layout_height="wrap_content"
                    android:text="@string/modulate_text"
                    android:textColor="@color/text"
                    android:textSize="30sp" />
    
                <Spinner 
                    android:id="@+id/search_adjust_method"
                    android:layout_width="270dip"
                    android:layout_height="60dip"
                    android:drawSelectorOnTop="true"
                    android:background="@drawable/search_spiner_selector"
                    android:focusable="true"
                    android:textColor="@color/text"
                    android:dropDownSelector="@color/blue"
                    android:popupBackground="#131723"
                    android:dropDownVerticalOffset="1dip"
                    android:textSize="30sp"
                    android:prompt="@string/sixtyfour_qam"
                    android:spinnerMode="dropdown"
                />
                <TextView
                    android:layout_width="70dip"
                    android:layout_height="60dip"
                    android:textSize="30sp"
                    android:paddingLeft="10dip"
                    android:text="@string/khz" />
            </LinearLayout>
            
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/tv_fast_search_main"
            android:layout_below="@id/hand_search_edit_layout"
            android:layout_marginTop="40dip"
            android:orientation="horizontal"
            android:paddingLeft="15dip" >

            <Button
                android:id="@+id/bt_start_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/search_btn_selector"
                android:focusable="true"
                android:text="@string/start_search"
                android:textColor="@color/text"
                android:textSize="35sp" />

            <Button
                android:id="@+id/bt_advanced_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="56dip"
                android:background="@drawable/search_btn_selector"
                android:focusable="true"
                android:visibility="invisible"
                android:text="@string/advanced_option"
                android:textColor="@color/text"
                android:textSize="35sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_text"
            android:layout_width="1342dip"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/tv_fast_search_main"
            android:layout_below="@id/ll_btn"
            android:layout_marginTop="20dip"
            android:orientation="horizontal" >

            <!-- 当前信号频率 -->

            <TextView
                android:layout_width="160dip"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/current_frequency_text"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/current_frequency"
                android:layout_width="170dip"
                android:layout_height="wrap_content"
                android:paddingLeft="25dip"
                android:singleLine="true"
                android:layout_gravity="center_vertical"
                android:textColor="@color/white"
                android:textSize="30sp" />
            <!-- 当前信号强度 -->

            <TextView
                android:layout_width="150dip"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/symbol_check_symbol_value"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/current_strong_text"
                android:layout_width="160dip"
                android:singleLine="true"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingLeft="25dip"
                android:textColor="@color/white"
                android:textSize="30sp" />
            <!-- 当前信号质量 -->

            <TextView
                android:layout_width="150dip"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/symbol_check_symbol_querty"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/current_quality_text"
                android:layout_width="160dip"
                android:singleLine="true"
                android:paddingLeft="25dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textColor="@color/white"
                android:textSize="30sp" />
            <!-- 搜索进度 -->

            <TextView
                android:layout_width="150dip"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/search_progress_text"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/search_progress"
                android:layout_width="160dip"
                android:paddingLeft="25dip"
                android:singleLine="true"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="30sp" />
        </LinearLayout>

        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:id="@+id/progress_bar"
            android:layout_width="1342dip"
            android:layout_height="24dip"
            android:layout_below="@id/ll_text"
            android:layout_marginTop="35dip"
            android:max="100"
            android:progressDrawable="@drawable/progressbar_bg" />

        <LinearLayout
            android:id="@+id/ll_channel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/tv_fast_search_main"
            android:layout_below="@id/progress_bar"
            android:visibility="gone"
            android:layout_marginTop="20dip"
            android:orientation="horizontal" >
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dip"
                android:text="@string/channel_count_title"
                android:textColor="@color/white"
                android:textSize="35sp" />

            <TextView
                android:id="@+id/channel_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dip"
                android:text="@string/zero"
                android:textColor="@color/white"
                android:textSize="45sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:text="@string/channel_count_text"
                android:textColor="@color/white"
                android:textSize="35sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_channel_title"
            android:layout_width="1342dip"
            android:layout_height="66dip"
            android:layout_alignLeft="@id/tv_fast_search_main"
            android:layout_below="@id/ll_channel"
            android:layout_marginTop="35dip"
            android:gravity="center_vertical"
            android:background="@drawable/search_form_front"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="315dip"
                android:layout_height="wrap_content"
                android:paddingLeft="50dip"
                android:text="@string/channel_number_text"
                android:textColor="@color/white"
                android:textSize="35sp" />

            <TextView
                android:layout_width="355dip"
                android:layout_height="wrap_content"
                android:text="@string/channel_name_text"
                android:textColor="@color/white"
                android:textSize="35sp" />

            <TextView
                android:layout_width="330dip"
                android:layout_height="wrap_content"
                android:text="@string/channel_type_text"
                android:textColor="@color/white"
                android:textSize="35sp" />

            <TextView
                android:layout_width="346dip"
                android:layout_height="wrap_content"
                android:text="@string/channel_frequency_text"
                android:textColor="@color/white"
                android:textSize="35sp" />
        </LinearLayout>

        <ListView
            android:id="@+id/channel_list"
            android:layout_width="1342dip"
            android:layout_height="fill_parent"
            android:layout_alignLeft="@id/tv_fast_search_main"
            android:layout_below="@id/ll_channel_title"
            android:divider="@color/Transparent"
            android:focusable="false"
            android:paddingBottom="90dip"
            android:stackFromBottom="true"
            android:fadingEdge="none"
            android:transcriptMode="alwaysScroll" >
        </ListView>
    </RelativeLayout>

</FrameLayout>