<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/search_bg" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="250dip"
        android:orientation="vertical"
        android:paddingTop="100dip" >

        <TextView
            android:id="@+id/tv_auto_search_main"
            android:layout_width="wrap_content"
            android:layout_height="57dip"
            android:text="@string/fast_search_advanced_title"
            android:drawableLeft="@drawable/search_left_arrows"
            android:textColor="@color/white"
            android:drawablePadding="20dip"
            android:paddingLeft="15dip"
            android:paddingRight="20dip"
            android:background="#202031"
            android:gravity="center_vertical"
            android:textSize="35sp" >
        </TextView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dip"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="210dip"
                android:layout_height="50dip"
                android:text="@string/frequency_text"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <novel.supertv.dvb.view.MyEditText
                android:id="@+id/frequency_edit_fast_search_advanced"
                android:layout_width="332dip"
                android:layout_height="65dip"
                android:layout_marginLeft="30dip"
                android:background="@drawable/et_search_selector"
                android:gravity="center"
                android:maxLength="3"
                android:numeric="integer"
                android:textColor="@color/white"
                android:textSize="30sp" />

             <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/khz" 
                android:layout_marginLeft="15dip"
                android:textColor="@color/white"
                android:textSize="30sp"/> 
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dip"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="210dip"
                android:layout_height="wrap_content"
                android:text="@string/symbol_rate_text"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <novel.supertv.dvb.view.MyEditText
                android:id="@+id/symbol_rate_edit_fast_search_advanced"
                android:layout_width="332dip"
                android:layout_height="65dip"
                android:layout_marginLeft="30dip"
                android:background="@drawable/et_search_selector"
                android:gravity="center"
                android:maxLength="4"
                android:numeric="integer"
                android:textColor="@color/white"
                android:textSize="30sp" />
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_marginLeft="15dip"
                android:textSize="30sp"
                android:text="@string/khz" /> 
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="66dip"
            android:layout_marginTop="50dip"
            android:orientation="horizontal" 
            >
    
            <TextView
                android:layout_width="210dip"
                android:layout_height="wrap_content"
                android:text="@string/modulate_text"
                android:textColor="@color/text"
                android:textSize="30sp" />

            <Spinner 
                android:id="@+id/search_adjust_method"
                android:layout_width="332dip"
                android:layout_height="66dip"
                android:layout_marginLeft="30dip"
                android:drawSelectorOnTop="true"
                android:background="@drawable/search_spiner_selector"
                android:textColor="@color/text"
                android:dropDownSelector="@color/blue"
                android:popupBackground="#131723"
                android:dropDownVerticalOffset="1dip"
                android:textSize="30sp"
                android:prompt="@string/sixtyfour_qam"
                android:spinnerMode="dropdown"
            />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:textColor="@color/white"
                android:layout_marginLeft="15dip"
                android:gravity="center_vertical"
                android:textSize="30sp"
                android:text="QAM" /> 
                    
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dip"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btn_save_auto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/search_btn_selector"
                android:text="@string/save"
                android:textColor="@color/text"
                android:textSize="35sp" />

            <Button
                android:id="@+id/btn_cancle_auto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="56dip"
                android:background="@drawable/search_btn_selector"
                android:text="@string/cancle"
                android:textColor="@color/text"
                android:textSize="35sp" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>